src/components/table/z-tr/styles.css
:host {
  position: relative;
  display: grid;
  width: 100%;
  box-sizing: border-box;
  grid-auto-flow: column;
  grid-template-columns: var(--z-table--expand-button-size, 0) repeat(var(--columns), minmax(128px, 1fr));

  --columns: 1;
}

* {
  box-sizing: border-box;
}

.z-tr--expand-button-container,
::slotted(*) {
  border-bottom: var(--z-table--cells-bottom-border-size, var(--border-size-small)) solid var(--color-surface03);
}

::slotted(*:not(:last-child)) {
  border-right: var(--z-table--cell-left-border, none);
}

:host([expandable]) {
  --show-expandable-button: visible;

  cursor: pointer;
}

:host([expandable]) ::slotted(*) {
  grid-row: 1;
}

:host([expandable]) ::slotted(:nth-last-child(2)) {
  border-right: none;
}

:host([expandable]) ::slotted(*:last-child) {
  border-left: 0;
  grid-column: 1 / span calc(var(--columns) + 1);
  grid-row: 2;
}

:host([expandable]:not([expanded])) ::slotted(*:last-child) {
  display: none;
}

:host([expanded]) {
  margin-bottom: 4px; /* prevents shadow to be cut by the next element */
  box-shadow: 0 4px 4px -2px var(--shadow-color-base);
}

:host([expanded]) .z-tr--expand-button-container,
:host([expanded]) ::slotted(*) {
  background-color: var(--color-background);
}

:host(:hover) {
  position: relative;
  z-index: 10;
  box-shadow: 0 4px 4px -2px var(--shadow-color-base, rgb(0 0 0 / 20%));
}

:host(:focus) {
  position: relative;
  z-index: 20;
  box-shadow: var(--shadow-focus-primary);
  outline: none;
}

.z-tr--expand-button-container {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--z-table--cells-background, var(--color-surface01));
}

.z-tr--expand-button-container button {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0;
  border: none;
  margin: auto;
  appearance: none;
  background: transparent;
  cursor: pointer;
  visibility: var(--show-expandable-button, hidden);
}

.z-tr--expand-button-container button z-icon {
  --z-icon-width: 16px;
  --z-icon-height: 16px;
}

.z-tr--focus-overlay {
  position: absolute;
  z-index: 30;
  right: 0;
  left: 0;
  width: 100%;
  border-radius: 4px;
  box-shadow: none;
  inset: 0;
  outline: none;
  pointer-events: none;
  transition: box-shadow 0.2s;
}

:host(:focus) .z-tr--focus-overlay {
  box-shadow:
    0 0 0 2px var(--shadow-focus-primary),
    var(--shadow-focus-primary);
  outline: none;
}

:host(:focus) ::slotted(*) {
  border-bottom: none;
}

:host(:focus) .z-tr--expand-button-container {
  border-bottom: none;
}

